--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.1",
     "axios": "^1.6.1",
+    "gh-pages": "^6.1.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.1",
     "react": "^18.2.0",
